--- a/src/components/EditNoteForm/styles.scss
+++ b/src/components/EditNoteForm/styles.scss
@@ -1,4 +1,4 @@
-.add-note-form {
+.edit-note-form {
   background-color: white;
   padding: 20px;
   border-radius: 15px;
@@ -12,7 +12,7 @@
 }
 
 @media screen and (max-width: 600px) {
-  .add-note-form {
+  .edit-note-form {
     width: 300px;
   }
 }
