--- a/src/components/NotePreview/styles.scss
+++ b/src/components/NotePreview/styles.scss
@@ -7,7 +7,7 @@
   padding-left: 20px;
   padding-right: 10px;
 
-  &__text {
+  &__title {
     font-family: "Inter";
     font-style: normal;
     font-weight: 700;
@@ -15,6 +15,31 @@
     line-height: 29px;
 
     color: #5e5e5e;
+  }
+
+  &__body {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 29px;
+
+    color: #7e7e7e;
+  }
+
+  &__text-wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__buttons-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 10;
+  }
+
+  &__button {
+    background-color: transparent;
   }
 }
 
@@ -31,4 +56,12 @@
 .note-list__item-exit-active {
   opacity: 0;
   transition: opacity 500ms ease-in;
+}
+
+@media screen and (max-width: 600px) {
+  .note {
+    &__body {
+      display: none;
+    }
+  }
 }
