--- a/src/components/NotesList/styles.scss
+++ b/src/components/NotesList/styles.scss
@@ -1,4 +1,10 @@
 .note-list {
+  padding-bottom: 20px;
+  &__header {
+    height: 55px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
   &__item {
     border-radius: 10px;
   }
@@ -7,5 +13,8 @@
     flex-direction: column;
     gap: 20px;
     margin-top: 20px;
+  }
+  &__header-sort {
+    justify-self: end;
   }
 }
