feat: animation added

--- a/notes/src/components/NotesList/styles.scss
+++ b/notes/src/components/NotesList/styles.scss
@@ -18,3 +18,14 @@
     justify-self: end;
   }
 }
+
+@media screen and (max-width: 1000px) {
+  .note-list {
+    &__header {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      height: auto;
+    }
+  }
+}
